Work on reducing code duplication for functional tests. Work on implementing group folders. And work on automatically creating run and database objects from raw and fasta files.